# backtesting

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  backtester.cpp  backtester.hpp  common.cpp  common.hpp  data_fetcher.cpp  data_fetcher.hpp  main.cpp  strategy.cpp  strategy.hpp
src/zzindic/: zigzag.c  zigzag.h
test/: CMakeLists.txt  test_data_fetcher.cpp  test_strategy.cpp
